--- a/web-deployment.yaml
+++ b/web-deployment.yaml
@@ -17,7 +17,7 @@ spec:
 # Container
       containers:
       - name: web
-        image: youbc/login:latest
+        image: youbc/intern:latest
 # readinessProbe
         readinessProbe:
           exec:
