--- a/yaml/mysql-svc.yaml
+++ b/yaml/mysql-svc.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
-  labels:
-    app: mysql
+  name: myapp-svc-nfs
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
-    - port: 3306
+  - port: 80
+    targetPort: 80
   selector:
-    app: mysql 
+    app: myapp-rs-nfs
