--- a/yaml/web-deployment.yaml
+++ b/yaml/web-deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   labels:
     app: web
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurage: 1
   replicas: 1
   selector:
     matchLabels:
