--- a/yaml/test-mysql.yaml
+++ b/yaml/test-mysql.yaml
@@ -24,9 +24,9 @@ spec:
                   name: mysql-password
                   key: password
             - name: MYSQL_DATABASE
-              value: k8sdb
+              value: test-mysql
             - name: MYSQL_USER
-              value: k8suser
+              value: admin
             - name: MYSQL_ROOT_HOST
               value: '%'  
             - name: MYSQL_PASSWORD
@@ -36,8 +36,8 @@ spec:
               name: mysql
           volumeMounts:
             - name: mysql-persistent-storage
-              mountPath: /home/ubuntu/intern/mysql
+              mountPath: /var/lib/mysql
       volumes:
         - name: mysql-persistent-storage
           persistentVolumeClaim:
-            claimName: myapp-pvc-nfs
+            claimName: mysql-volumeclaim 
